fix iotime calculation bug in external sort java :( add an approach for fix memory leak java kryo method.