@@ -24,8 +24,3 @@ file_external_sort="bin/benchmark/externalsort/result_java_externalsort_$2.txt"
 #clear the OS cache
 echo 3 > /proc/sys/vm/drop_caches && sync
 time taskset -c 0 java -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -Xms2g -Xmx6g -cp  ./target/Twitter-1.0-SNAPSHOT-jar-with-dependencies.jar edu.bu.benchmarks.ExternalSort $datapath $number_of_files $serialization_type $2 true
-
-sleep 200
-
-echo 3 > /proc/sys/vm/drop_caches && sync
-time java -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -Xms2g -Xmx6g -cp  ./target/Twitter-1.0-SNAPSHOT-jar-with-dependencies.jar edu.bu.benchmarks.ExternalSort $datapath $number_of_files $serialization_type $2 false
